<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/login_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/small_dimension"
        android:text="@string/login"
        android:textColor="@color/login_text_color"
        android:textSize="@dimen/login_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingBottom="@dimen/small_dimension" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone" />

    <CheckBox
        android:id="@+id/t_c_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:text="@string/i_accept_t_amp_c" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/submit_color"
        android:text="@string/submit"
        android:textColor="@color/submit_text_color" />


</LinearLayout>