<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_CC_2_1">

    <Button
        android:id="@+id/button_text_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonOpenSecondActivityCC2OnClick"
        android:text="@string/text_one"
        app:layout_constraintBottom_toTopOf="@+id/button_text_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_text_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonOpenSecondActivityCC2OnClick"
        android:text="@string/text_three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_text_two" />

    <Button
        android:id="@+id/button_text_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonOpenSecondActivityCC2OnClick"
        android:text="@string/text_two"
        app:layout_constraintBottom_toTopOf="@+id/button_text_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_text_one" />

</androidx.constraintlayout.widget.ConstraintLayout>